# data-mining-anomaly-detection

./: .gitignore  README.md  main.py  pyproject.toml  report.tex  requirements.txt
.github/workflows/: ci.yml
data/raw/: anomalies.csv  articles.csv  clusters.csv
data/results/: anomalies.csv  clusters.csv
docs/: assignment_3_strategic_implementation.md
notebooks/: 01_advanced_exploration_and_normalization.ipynb  01_task1_advanced_exploration_and_normalization.ipynb  02_normalization_walkthrough.ipynb  02_task1_normalization_walkthrough.ipynb  03_lsa_anomaly_search.ipynb  03_task2_clustering_methods_demo.ipynb  04_anomaly_vectorization_comparison.ipynb  04_task2_cluster_interpretation_and_submission.ipynb  05_task2_clustering_methods_demo.ipynb  05_task3_anomaly_methods_and_top50.ipynb  06_task2_cluster_interpretation_and_submission.ipynb  06_task3_lsa_anomaly_search.ipynb  07_task3_anomaly_methods_and_top50.ipynb  07_task3_anomaly_vectorization_comparison.ipynb  08_task3_structural_features_analysis.ipynb  09_task2_sentence_embedding_clustering.ipynb
src/: __init__.py
src/anomaly_detection/: __init__.py  ensemble_detection.py  isolation_forest_detection.py  knn_detection.py  lof_detection.py
src/clustering/: __init__.py  agglomerative_clustering.py  check_kmeans_neighbor_values.py  kmeans_clustering.py
src/core/: __init__.py  assignment_pipeline.py  data_io.py  paths.py
src/data_mining_assignment/: __init__.py  main.py
src/data_tools/: __init__.py  split_articles_by_original_sentence_match.py
src/exploration/: __init__.py  data_exploration.py
src/preprocessing/: __init__.py  structural_features.py  vectorizer.py  (+1 more)
tests/: conftest.py  test_anomaly_output.py  test_data_exploration.py  test_paths.py  test_pipeline.py  test_structural_features.py  test_text_normalization.py  test_vectorization_models.py
(+15 files in other folders)
